added data-text attributes to each elements

--- a/index.html
+++ b/index.html
@@ -8,31 +8,35 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="data-item" data-testid="slackDisplayImage">
-        <div class="profileImg">
-          <img
-            src="./assets/profile.png"
-            alt="WebHav0cx"
-            style="max-width: 100%"
-          />
-        </div>
+      <div class="profileImg">
+        <img
+          data-testid="slackDisplayImage"
+          src="./assets/profile.png"
+          alt="WebHav0cx"
+          style="max-width: 100%"
+        />
       </div>
       <div class="container">
-        <div class="data-item" data-testid="slackUserName">
-          <h1>Slack Name: WebHav0cx</h1>
+        <div class="data-item">
+          <h1 data-testid="slackUserName">WebHav0cx</h1>
         </div>
-
-        <div class="data-item" data-testid="currentDayOfTheWeek">
-          <h3>Current Day of the Week: <span id="currentDay"></span></h3>
+        <div class="data-item">
+          <h3 data-testid="currentDayOfTheWeek" id="currentDay"></h3>
         </div>
-        <div class="data-item" data-testid="currentUTCTime">
-          <h3>Current UTC Time: <span id="currentUTC"></span></h3>
+        <div class="data-item">
+          <h3>
+            Current UTC Time:
+            <span data-testid="currentUTCTime" id="currentUTC"></span>
+          </h3>
         </div>
-        <div class="data-item" data-testid="myTrack">
-          <h2>Track: <span>Front End Track</span></h2>
+        <div class="data-item">
+          <h2 data-testid="myTrack">Front End Track</h2>
         </div>
-        <div class="github-link" data-testid="githubURL">
-          <a href="https://github.com/WebHav0cx/HNGx.git" target="_blank"
+        <div class="github-link">
+          <a
+            data-testid="githubURL"
+            href="https://github.com/WebHav0cx/HNGx.git"
+            target="_blank"
             >GitHub Repo</a
           >
         </div>
